# zo-arb-py

./: .env.example  README.md  main.py  pyproject.toml
src/: __init__.py  arb.py  ftx_house.py  main.py  trading_types.py  zo_house.py
