[tool.poetry]
name = "zo-python-arb"
version = "0.1.0"
description = ""
authors = ["Bit Tensor"]

[tool.poetry.dependencies]
python = "^3.10"
zo-sdk = "^0.1.4"
numpy = "^1.23.1"
solana = "^0.25.1"
ftx = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
